แก้ไขทำให้การค้นหารใน Sprint 2 ให้ถูกต้อง - close #179
